--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
             <h3 id="documents_processed"></h3>
             <h3 id="pages_printed"></h3>
         </div>
+        <p id="reset_button"><input type="button" id="btn_reset" value="Reset" /></p>
     </body>
 </html>
